@@ -35,6 +35,7 @@ freeipa (4.7.0~pre1+git20180411-1) UNRELEASED; urgency=medium
     SSLCertificateFile directive until upstream is fixed.
   * server.postinst: Enable default-ssl site.
   * control: Depend on chrony instead of ntp.
+  * fix-paths.diff: Add CHRONY_CONF.
 
  -- Timo Aaltonen <tjaalton@debian.org>  Fri, 06 Apr 2018 16:18:42 +0300
 
